examples/kitchen-sink/src/pages/errors/client-components/cc-throws-in-browser.tsx
"use client";

export default function CCThrowsInBrowser() {
  if (typeof window !== "undefined") {
    throw new Error("Oh no!");
  }
  return null;
}
